# mini-os-framework

./: .gitignore  CMakeLists.txt  README.md  kernel-ld-script.ld  main.c  multiboot2.c  multiboot2.h  partimage.sh
grub2/: early-grub.cfg  grub.cfg
lib/: CMakeLists.txt
lib/include/: stdint.h  string.h
lib/src/: string.c
